# simultaneous-productions

./: .dir-locals.el  .gitignore  Cargo.toml  LICENSE  README.org  graphviz-test-new.dot  graphviz-test.dot  license-header-template  pants.ini  rust-toolchain  rustfmt.toml
core/: Cargo.toml  README.org
core/proptest-regressions/: grammar_grammar.txt
core/src/: grammar_grammar.rs  grammar_indexing.rs  interns.rs  lib.rs  lowering_to_indices.rs  parsing.rs  reconstruction.rs  text_backend.rs  transitions.rs
generator-api/: Cargo.toml
generator-api/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
pants-plugins/upstreamable/: register.py
pants-plugins/upstreamable/subsystems/: coursier_source.py  ensime_gen_source.py
pants-plugins/upstreamable/targets/: pants_jvm_binary_subproject.py  sbt_dist.py
pants-plugins/upstreamable/tasks/: bootstrap_coursier.py  bootstrap_ensime_gen.py  bootstrap_jvm_source_tool.py  build_pants_jvm_binary_subprojects.py  ensime_gen.py  publish_local_sbt_distributions.py
papers/: grammar.out  grammar.tex  grammar.toc  parsing-and-computation.bib  parsing-and-computation.out  parsing-and-computation.tex  parsing-and-computation.toc  theory.out  theory.tex
productions/: Productions.scala
src/: binding.rs  cyclic_ref.rs  grammar_indexing.rs  lib.rs  lowering_to_indices.rs  parsing.rs  reconstruction.rs
stream-api/: Cargo.toml
stream-api/src/: lib.rs
