[package]
name = "simultaneous-productions"
version = "0.0.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2021"

[dependencies]
sp-core = { path = "./core/" }

[workspace]
members = [
    # ".", (not compilable yet)
    "core",
]
default-members = [
    "core",
]
