[package]
name                    = "sp-core"
version                 = "0.0.0"
authors                 = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition                 = "2021"

[dependencies]
displaydoc              = { git = "https://github.com/yaahc/displaydoc", rev = "7159bb5c9d41ca3c7ccf04ae86ae3acb0ea12a27" }
dot                     = "0.1.4"
indexmap                = "1.9.2"
priority-queue          = "1.3.1"
