[package]
name = "sp-macros"
version = "0.0.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]

[lib]
name = "sp_macros"
plugin = true
crate-type = ["dylib"]

[dependencies]
proc_macro2 = "1.0.3"
quote = "1.0"
simultaneous-productions = { path = "../" }
syn = "1.0.5"
